tog bort dummyprojekten

--- a/static/index.html
+++ b/static/index.html
@@ -160,9 +160,7 @@
                    value: project,
                    optionsCaption: 'Välj projekt...'">
 	</select>
-	
-	
-	<select><option>default</option></select><option>default</option></select><option>default</option></select> <button>Redigera projekt</button><br>
+	<button>Redigera projekt</button><br>
 	Prioritet:  <select><option>Low</option><option selected="selected">Medium</option><option>High</option></select><br>
 	Datum: År, Månad, Dag, Tid<br>
 	
